# nerva-tensorflow

./: README.md  index.html  nerva-tensorflow.html  pyproject.toml  setup.cfg
.github/docker/: Dockerfile
.github/workflows/: deploy-sphinx.yml
doc/: build_asciidoc_documentation.sh  index.html
doc/asciidoc/: nerva-tensorflow.adoc  settings.adoc
doc/sphinx/: conf.py
examples/: custom_components.py  mlp_construction.py  train_mnist.py  train_synthetic.py  training1.py
scripts/: check_equations.py
sphinx/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
sphinx/.doctrees/: environment.pickle  index.doctree
sphinx/_autosummary/: nerva_tensorflow.activation_functions.html  nerva_tensorflow.datasets.html  nerva_tensorflow.html  nerva_tensorflow.layers.html  nerva_tensorflow.learning_rate.html  nerva_tensorflow.loss_functions.html  nerva_tensorflow.matrix_operations.html  nerva_tensorflow.multilayer_perceptron.html  nerva_tensorflow.optimizers.html  nerva_tensorflow.softmax_functions.html  nerva_tensorflow.training.html  nerva_tensorflow.utilities.html  nerva_tensorflow.weight_initializers.html
sphinx/_modules/: index.html
sphinx/_sources/: index.rst.txt
src/nerva_tensorflow/: __init__.py  activation_functions.py  datasets.py  layers.py  loss_functions.py  matrix_operations.py  multilayer_perceptron.py  optimizers.py  softmax_functions.py  training.py  utilities.py  (+1 more)
tests/: run_all_tests.sh  test_datasets_basics.py  test_learning_rate_schedulers.py  test_loss_functions.py  test_matrix_operations_basics.py  test_multilayer_perceptrons.py  test_one_layer.py  test_optimizers_basics.py  test_softmax_functions_basics.py  utilities.py
tools/: mlp.py
(+38 files in other folders)
